--- a/src/css/Bio.css
+++ b/src/css/Bio.css
@@ -16,7 +16,9 @@
 
 #txtBio{
   margin : 20px;
-  width : 300px;
+  width : 310px;
+  height: 60%;
+  text-align: justify;
 }
 
 #timeLine{
@@ -26,11 +28,15 @@
 #carteBio{
   display : flex;
   margin : auto;
-  width : 75%;
+  width : 76%;
   margin-bottom: 50px;
 }
 
-@media screen and (max-width: 1450px) {
+#imgBio{
+  width: 290px;
+}
+
+@media screen and (max-width: 1400px) {
   #imgBio{
     display : none;
   }
